--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
     <head>
-        <title>event-tech.us</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+        <link rel="canonical" href="https://event-tech.us">
+        <title>event-tech.us</title>
         <style>
-            body {margin: 5% auto; background: white; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
+            body {margin: 5% auto; background: white; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 73%;}
             code {background: white;}
         </style>
     </head>
     <body>
         <header>
-            <h1>Welcome to event-tech.us</h1>
+            <h1>
+                event-tech.us
+            </h1>
         </header>
+
         <main>
             <p>New website coming soon.</p>
         </main>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer>
             <p>&copy; 2025 event-tech.us. All rights reserved.</p>
         </footer>
