--- a/index.html
+++ b/index.html
@@ -3,24 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+        <meta name="description" content="The leader in event WiFi.">
         <link rel="canonical" href="https://event-tech.us">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <title>event-tech.us</title>
-        <style>
-            body {margin: 5% auto; background: white; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 73%;}
-            code {background: white;}
-        </style>
+                <style>
+                    body {
+                        margin: 5% auto;
+                        background: white;
+                        color: #444444;
+                        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+                        font-size: 16px;
+                        line-height: 1.8;
+                        max-width: 73%;
+                    }
+                    code {
+                        background: white;
+                    }
+                </style>
     </head>
     <body>
         <header>
-            <h1>
-                event-tech.us
-            </h1>
+            <h1>Welcome to event-tech.us</h1>
         </header>
-
         <main>
-            <p>New website coming soon.</p>
+            <section>
+                <p>
+                    The leading provider of WiFi and internet connectivity solutions for events, conferences, and trade shows.
+                </p>
+            </section>
         </main>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <footer>
             <p>&copy; 2025 event-tech.us. All rights reserved.</p>
         </footer>
